<resources>
    <string name="app_name">Room Notes</string>
    <string name="tvPriorityNumber">1</string>
    <string name="tvTitle">Title</string>
    <string name="tvDescription">Description</string>
    <string name="tvPriority">Priority:</string>
    <string name="tvSave">Save</string>
    <string name="tvDelete">Delete</string>
    <string name="tvDeleteAllNotes">Delete all notes</string>
    <string name="tvAddNote">Add note</string>
    <string name="tvEditNote">Edit note</string>
    <string name="tvFailedEditNote">Note can\'t be updated</string>
    <string name="tvAllFieldsRequired">All fields can\'t be empty</string>
    <string name="tvNoteSaved">Note saved</string>
    <string name="tvNoteUpdated">Note updated</string>
    <string name="tvNoteDeleted">Note deleted</string>
    <string name="tvNoteNotSaved">Note not saved</string>
    <string name="btnSave">Save</string>
    <string name="tvConfirmDelete">Delete all notes ?</string>
    <string name="tvNo">No</string>
    <string name="tvYes">Yes</string>
    <string name="tvNotesDeleted">All notes deleted</string>
</resources>
