<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.AddEditNoteActivity">

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_edittext"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_edit"
                android:contentDescription="@string/app_name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/tvTitle"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSemiBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_edittext"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_edit"
                android:contentDescription="@string/app_name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/tvDescription"
                android:gravity="top|start"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSemiBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPriority"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <NumberPicker
                android:id="@+id/nbPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:text="@string/btnSave"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>